added a model and created foreign key on that and then intialized and displayed an object

--- a/faculty/templates/home.html
+++ b/faculty/templates/home.html
@@ -4,16 +4,8 @@
 
 <h1>Hello World!</h1>
 <p>Hello</p>
-<p>{{facobj.name}}</p>
-<p>{{facobj.dept}}</p>
-<p>{{facobj.isguide}}</p>
-
-<p>{{facobj.ischair}}</p>
-
-<p>{{facobj.iscommem}}</p>
-<p>{{facobj.isprojcoo}}</p>
-<p>{{facobj.email }}</p>
-<p>{{facobj.domain }}</p>
+<p>{{eval.rollNoId}}</p>
+<p>{{eval.guide.name}}</p>
 
 
 </body>
